# blosc2-src-rs

./: .gitmodules  Cargo.toml  README  build.rs
src/: bindings.rs  lib.rs
tests/: test.rs
