[package]
name = "blosc2-src"
version = "0.1.0"
authors = ["Sean Pace <sean.m.pace@outlook.com>"]
edition = "2021"
build = "build.rs"
links = "blosc2"
license-file = "c-blosc2/LICENSE.txt"
exclude = [
    "c-blosc2/compat/**",
    "c-blosc2/tests/**",
    "c-blosc2/bench/**",
    "c-blosc2/internal-complibs/zlib-1.2.11/contrib/**",
    "c-blosc2/internal-complibs/zlib-1.2.11/examples/**",
    "c-blosc2/internal-complibs/zlib-1.2.11/doc/**",
    "c-blosc2/internal-complibs/zstd-1.5.2/legacy/**",
]
repository = "https://github.com/maiteko/blosc2-src-rs"
keywords = ["compression"]
categories = ["external-ffi-bindings", "compression"]
description = "FFI bindings for c-blosc2"


[features]
# run bindgen when building, requires llvm
bindgen = []

[dependencies]
cc = "1.0"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0"
